QQmlListModel: Align variants of set() for array-likes

We need to handle all array-likes in both variants.

Amends commit 07cfd1b9eb457f04009a53d1b2fec7291e3dc674.

Pick-to: 6.8
Fixes: QTBUG-136581
Change-Id: I403dbb97c8f59e37babd6391f70fdc1a1a993cd6
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>
(cherry picked from commit 0f08e9901805ef158850e3904e006d800a1a0cb7)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>